--- a/services.html
+++ b/services.html
@@ -115,7 +115,10 @@ footer .widget h5 {
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-          <a class="navbar-brand js-scroll-trigger" href="index.php" style="margin-top: 0px;font-family: 'IBM Plex Sans', sans-serif;"><h5 style="color: white;"><i class="fa fa-user-plus" aria-hidden="true"></i>&nbsp GLOBAL HOSPITALS</h5></a>
+          <a class="navbar-brand js-scroll-trigger" href="index.php" style="margin-top: 0px;font-family: 'IBM Plex Sans', sans-serif;"><h5 style="color: white;"><i class="fa fa-user-plus" aria-hidden="true"></i>&nbsp Turbo Hospital Records Management System
+            HOME
+            ABOUT US
+            </h5></a>
         </div>
 
         <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
@@ -137,7 +140,10 @@ footer .widget h5 {
           <div class="row">
             <div class="col-lg-6">
               <div class="wow fadeInDown" data-wow-offset="0" data-wow-delay="0.1s">
-                <h2 style="font-family: 'IBM Plex Sans', sans-serif;color: white">GLOBAL HOSPITALS</h2>
+                <h2 style="font-family: 'IBM Plex Sans', sans-serif;color: white">Turbo Hospital Records Management System
+                  HOME
+                  ABOUT US
+                  </h2>
               </div>
               <div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.1s">
                 <h4 class="h-light" style="font-family: 'IBM Plex Sans', sans-serif;color: #efe1e1">Provide best quality healthcare for you</h4>
@@ -146,9 +152,10 @@ footer .widget h5 {
                 <div class="wow fadeInRight" data-wow-delay="0.1s">
 
                   <ul class="lead-list">
-                    <li><span class="fa fa-check-square-o fa-2x icon-success"></span> <span class="list"><strong>Affordable monthly premium packages</strong><br />Lorem ipsum dolor sit amet, in verterem persecuti vix, sit te meis</span></li>
-                    <li><span class="fa fa-check-square-o fa-2x icon-success"></span> <span class="list"><strong>Choose your favourite services</strong><br />Lorem ipsum dolor sit amet, in verterem persecuti vix, sit te meis</span></li>
-                    <li><span class="fa fa-check-square-o fa-2x icon-success"></span> <span class="list"><strong>Only use friendly environment</strong><br />Lorem ipsum dolor sit amet, in verterem persecuti vix, sit te meis</span></li>
+                    <li><span class="fa fa-check-square-o fa-2x icon-success"></span> <span class="list"><strong>Affordable monthly premium packages</strong><br />We accept the common and most basic premium packages that are easily affordable
+                    to the common mwananchi to cover all your medical expenses (NHIF, M-pay, AMACO, etc.)</span></li>
+                    <li><span class="fa fa-check-square-o fa-2x icon-success"></span> <span class="list"><strong>Choose your favourite services</strong><br />From the best services we offer, our specialists will be at your service to make sure youre well catered for</span></li>
+                    <li><span class="fa fa-check-square-o fa-2x icon-success"></span> <span class="list"><strong>Only use friendly environment</strong><br />We provide a stress free environment to our clients to make sure they are comfortable.</span></li>
                   </ul>
                   <p class="text-right wow bounceIn" data-wow-delay="0.4s">
                     <a href="#" class="btn btn-skin btn-lg" style="background:white;color:#006ccf">Learn more <i class="fa fa-angle-right"></i></a>
@@ -180,7 +187,7 @@ footer .widget h5 {
                 <i class="fa fa-check fa-3x bg-skin"></i>
                 <h4>Make an appoinment</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, nec te mollis utroque honestatis, ut utamur molestiae vix, graecis eligendi ne.
+                  We respect your time, what time do you want to see us?
                 </p>
               </div>
             </div>
@@ -192,7 +199,7 @@ footer .widget h5 {
                 <i class="fa fa-list-alt fa-3x bg-skin"></i>
                 <h4>Choose your package</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, nec te mollis utroque honestatis, ut utamur molestiae vix, graecis eligendi ne.
+                  We offer the best treatment packages for you, we are only a call away.
                 </p>
               </div>
             </div>
@@ -203,7 +210,7 @@ footer .widget h5 {
                 <i class="fa fa-user-md fa-3x bg-skin"></i>
                 <h4>Help by specialist</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, nec te mollis utroque honestatis, ut utamur molestiae vix, graecis eligendi ne.
+                  Our group of specialists will help you walk the journey of recovery with ease. we are here to help you know.
                 </p>
               </div>
             </div>
@@ -216,7 +223,7 @@ footer .widget h5 {
                 <i class="fa fa-hospital-o fa-3x bg-skin"></i>
                 <h4>Get diagnostic report</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, nec te mollis utroque honestatis, ut utamur molestiae vix, graecis eligendi ne.
+                  Diagnostic reports delivered right to your safety. Without alteration and safe from data infringement.
                 </p>
               </div>
             </div>
@@ -245,7 +252,7 @@ footer .widget h5 {
                 </div>
                 <div class="service-desc">
                   <h5 class="h-light">Medical checkup</h5>
-                  <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                  <p>Checkups done efficiently with your own precise timing and results delivered almost immediately.</p>
                 </div>
               </div>
             </div>
@@ -257,7 +264,7 @@ footer .widget h5 {
                 </div>
                 <div class="service-desc">
                   <h5 class="h-light">Nursing Services</h5>
-                  <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                  <p>Our personnel are trained to make sure that they offer caring services to your care. You will always be satisfied.</p>
                 </div>
               </div>
             </div>
@@ -268,7 +275,7 @@ footer .widget h5 {
                 </div>
                 <div class="service-desc">
                   <h5 class="h-light">Pharmacy</h5>
-                  <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                  <p>Our pharmacy is well equipped to ensure that all the prescriptions are available for your and at no stress.</p>
                 </div>
               </div>
             </div>
@@ -284,7 +291,7 @@ footer .widget h5 {
                 </div>
                 <div class="service-desc">
                   <h5 class="h-light">Gyn Care</h5>
-                  <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                  <p>We are working towards growing our services, we will always update you when this service is fully available for your service</p>
                 </div>
               </div>
             </div>
@@ -296,7 +303,7 @@ footer .widget h5 {
                 </div>
                 <div class="service-desc">
                   <h5 class="h-light">Neurology</h5>
-                  <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                  <p>With plans underway, we are working towards growing our services, we will always update you when this service is fully available for your service</p>
                 </div>
               </div>
             </div>
@@ -307,8 +314,8 @@ footer .widget h5 {
                   <span class="fa fa-heartbeat fa-3x"></span>
                 </div>
                 <div class="service-desc">
-                  <h5 class="h-light">Sleep Center</h5>
-                  <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                  <h5 class="h-light">Physiotherapy Center</h5>
+                  <p>We are working towards growing our services, we will always update you when this service is fully available for your service</p>
                 </div>
               </div>
             </div>
@@ -326,9 +333,13 @@ footer .widget h5 {
           <div class="col-sm-6 col-md-4">
             <div class="wow fadeInDown" data-wow-delay="0.1s">
               <div class="widget">
-                <h5>About Global Hospitals</h5>
+                <h5>About Turbo Hospital Records Management System
+                  HOME
+                  ABOUT US
+                  </h5>
                 <p>
-                  Lorem ipsum dolor sit amet, ne nam purto nihil impetus, an facilisi accommodare sea
+                  Turbo Hospital is a health facility found at the border of Uasin Gishu and Kakamega counties. We are a team set and dedicated
+                  to offer the best medical treatment for your well being. 
                 </p>
               </div>
             </div>
@@ -347,9 +358,9 @@ footer .widget h5 {
           <div class="col-sm-6 col-md-4">
             <div class="wow fadeInDown" data-wow-delay="0.1s">
               <div class="widget">
-                <h5>Global Hospitals</h5>
+                <h5>Turbo Hospital Records Management System</h5>
                 <p>
-                  Nam leo lorem, tincidunt id risus ut, ornare tincidunt naqunc sit amet.
+                  With the growth of technology, We want to specialize health services and make sure that all the services offered are stress free.
                 </p>
                 <ul>
                   <li>
@@ -360,12 +371,12 @@ footer .widget h5 {
                   <li>
                     <span class="fa-stack fa-lg">
                   <i class="fa fa-phone fa-stack-1x fa-inverse"></i>
-                </span> +62 0888 904 711
+                </span> +254716304035
                   </li>
                   <li>
                     <span class="fa-stack fa-lg">
                   <i class="fa fa-envelope-o fa-stack-1x fa-inverse"></i>
-                </span> global@hospitals.com
+                </span> turbohospital@hospital.com
                   </li>
 
                 </ul>
@@ -376,7 +387,7 @@ footer .widget h5 {
             <div class="wow fadeInDown" data-wow-delay="0.1s">
               <div class="widget">
                 <h5>Our location</h5>
-                <p>The Suithouse V303, Kuningan City, Jakarta Indonesia 12940</p>
+                <p>Eldoret- Bungoma Highway, P.O Box 12940- 30100, Turbo Town</p>
 
               </div>
             </div>
